--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -13364,32 +13364,6 @@ references:
   isSpec: "True"
   fullName: MacroTools.PassiveAbilities.Execute.Execute
   nameWithType: Execute.Execute
-- uid: MacroTools.PassiveAbilities.Execute.DamageMultCapital
-  name: DamageMultCapital
-  href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultCapital
-  commentId: P:MacroTools.PassiveAbilities.Execute.DamageMultCapital
-  fullName: MacroTools.PassiveAbilities.Execute.DamageMultCapital
-  nameWithType: Execute.DamageMultCapital
-- uid: MacroTools.PassiveAbilities.Execute.DamageMultCapital*
-  name: DamageMultCapital
-  href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultCapital_
-  commentId: Overload:MacroTools.PassiveAbilities.Execute.DamageMultCapital
-  isSpec: "True"
-  fullName: MacroTools.PassiveAbilities.Execute.DamageMultCapital
-  nameWithType: Execute.DamageMultCapital
-- uid: MacroTools.PassiveAbilities.Execute.DamageMultControlPoint
-  name: DamageMultControlPoint
-  href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultControlPoint
-  commentId: P:MacroTools.PassiveAbilities.Execute.DamageMultControlPoint
-  fullName: MacroTools.PassiveAbilities.Execute.DamageMultControlPoint
-  nameWithType: Execute.DamageMultControlPoint
-- uid: MacroTools.PassiveAbilities.Execute.DamageMultControlPoint*
-  name: DamageMultControlPoint
-  href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultControlPoint_
-  commentId: Overload:MacroTools.PassiveAbilities.Execute.DamageMultControlPoint
-  isSpec: "True"
-  fullName: MacroTools.PassiveAbilities.Execute.DamageMultControlPoint
-  nameWithType: Execute.DamageMultControlPoint
 - uid: MacroTools.PassiveAbilities.Execute.DamageMultNonResistant
   name: DamageMultNonResistant
   href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultNonResistant
@@ -13416,6 +13390,19 @@ references:
   isSpec: "True"
   fullName: MacroTools.PassiveAbilities.Execute.DamageMultResistant
   nameWithType: Execute.DamageMultResistant
+- uid: MacroTools.PassiveAbilities.Execute.DamageMultStructure
+  name: DamageMultStructure
+  href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultStructure
+  commentId: P:MacroTools.PassiveAbilities.Execute.DamageMultStructure
+  fullName: MacroTools.PassiveAbilities.Execute.DamageMultStructure
+  nameWithType: Execute.DamageMultStructure
+- uid: MacroTools.PassiveAbilities.Execute.DamageMultStructure*
+  name: DamageMultStructure
+  href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_DamageMultStructure_
+  commentId: Overload:MacroTools.PassiveAbilities.Execute.DamageMultStructure
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.Execute.DamageMultStructure
+  nameWithType: Execute.DamageMultStructure
 - uid: MacroTools.PassiveAbilities.Execute.OnDealsDamage
   name: OnDealsDamage()
   href: api-macroTools/MacroTools.PassiveAbilities.Execute.html#MacroTools_PassiveAbilities_Execute_OnDealsDamage
